chore(db): use db username & password

--- a/LinkHR/.env.example
+++ b/LinkHR/.env.example
@@ -1,2 +1,5 @@
 SQL_SERVER_NAME=YOUR_SERVER_NAME
 SQL_DATABASE_NAME=YOUR_DB_NAME
+SQL_DATABASE_USERNAME=YOUR_DB_USERNAME
+SQL_DATABASE_PASSWORD=YOUR_DB_PASSWORD
+
