--- a/LinkHR/LinkHR.csproj
+++ b/LinkHR/LinkHR.csproj
@@ -10,6 +10,8 @@
 
 	<ItemGroup>
 	  <PackageReference Include="DotNetEnv" Version="3.1.1" />
+	  <PackageReference Include="EPPlus" Version="8.0.3" />
+	  <PackageReference Include="iTextSharp" Version="5.5.13.4" />
 	  <PackageReference Include="Microsoft.Data.SqlClient" Version="6.0.1" />
 	</ItemGroup>
 
